--- a/styles.css
+++ b/styles.css
@@ -80,3 +80,33 @@ nav {
     font-size: 2em;
     cursor: pointer;
 }
+
+
+
+@media (min-width: 600px)
+{
+    body {
+        background-color: rgb(30, 79, 176);
+    }
+
+    .caption {
+        display: block;
+    }
+
+    .card {
+        width: 40%;
+        display: inline-block;
+    }
+
+    .menu-icon {
+        display: none;
+    }
+
+    nav {
+        display: block;
+    }
+
+    .menu li {
+        display: inline-block;
+    }
+}
